🖼  - Perhaps this would be better served by a JPEG

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             animation: drift 30s linear infinite;
             color: hsl(0, 0%, 1%);
             background-color: whitesmoke;
-            background-image: url('/img/mesh-gradient.webp'), url('/img/mesh-gradient.png');
+            background-image: url('/img/mesh-gradient.jpg');
             background-size: cover;
 
             -webkit-font-smoothing: antialiased;
