--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@xdesro" />
     <meta name="twitter:image" content="https://stillness.digital/meta/og.png" />
-    <meta property="og:title" content="OddBot" />
+    <meta name="twitter:description"
+        content="A website built just for you, which expects nothing of your time. Breathe freely, old friend.">
+
+    <meta property="og:title" content="Stillness.Digital | A Place To Rest" />
     <meta property="og:image" content="https://stillness.digital/meta/og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
