--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         }
 
         h1 {
-            font-size: 3.8rem;
+            font-size: clamp(2.3rem, 9vw, 3.8rem);
             font-weight: normal;
             line-height: 1.1;
             max-width: 14ch;
@@ -94,6 +94,7 @@
         p {
             padding: 1rem;
             text-align: center;
+            max-width: 22ch;
         }
 
         aside {
