🤺 - Perhaps those swashes on 'remain' could be a little less heavy-handed.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             max-width: 14ch;
             text-align: center;
             text-transform: uppercase;
-            color: #030303;
+            color: hsl(0, 0%, 1%);
         }
 
         h1:first-letter {
@@ -87,8 +87,8 @@
 
         h1 em {
             font-style: normal;
-            font-feature-settings: 'ss13'on;
-            color: #fff;
+            font-feature-settings: 'ss12'on;
+            color: hsl(0, 0%, 100%);
         }
 
         p {
@@ -100,7 +100,7 @@
         aside {
             font-size: 4rem;
             font-feature-settings: 'ss14'on;
-            color: #fff;
+            color: hsl(0, 0%, 100%);
         }
 
         form {
