--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <meta name="description"
         content="A website built just for you, which expects nothing of your time. Breathe freely, old friend.">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png">
-    <link rel="manifest" href="/meta/site.webmanifest">
-    <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#030303">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#030303">
     <meta name="msapplication-TileColor" content="#efefef">
     <meta name="theme-color" content="#ffffff">
 
     <meta name="twitter:title" content="Stillness.Digital | A Place To Rest" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@xdesro" />
-    <meta name="twitter:image" content="https://stillness.digital/meta/og.png" />
+    <meta name="twitter:image" content="https://stillness.digital/og.png" />
     <meta name="twitter:description"
         content="A website built just for you, which expects nothing of your time. Breathe freely, old friend.">
 
     <meta property="og:title" content="Stillness.Digital | A Place To Rest" />
-    <meta property="og:image" content="https://stillness.digital/meta/og.png" />
+    <meta property="og:image" content="https://stillness.digital/og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
@@ -36,8 +36,7 @@
             font-weight: normal;
             font-style: normal;
             font-display: swap;
-            src: url('/fonts/Ninna-Regular.woff2') format('woff2'),
-                url('/fonts/Ninna-Regular.woff') format('woff');
+            src: url('/ninna.woff2') format('woff2');
         }
 
         body {
@@ -49,8 +48,8 @@
             margin: 0;
             animation: drift 30s linear infinite;
             color: hsl(0, 0%, 1%);
-            background-color: whitesmoke;
-            background-image: url('/img/mesh-gradient.jpg');
+            background-color: hsl(0, 0%, 96%);
+            background-image: url('/gradient.jpg');
             background-size: cover;
 
             -webkit-font-smoothing: antialiased;
@@ -92,9 +91,9 @@
         }
 
         p {
+            max-width: 22ch;
             padding: 1rem;
             text-align: center;
-            max-width: 22ch;
         }
 
         aside {
