--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <meta name="description"
         content="A website built just for you, which expects nothing of your time. Breathe freely, old friend.">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#030303">
+    <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png">
+    <link rel="manifest" href="/meta/site.webmanifest">
+    <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#030303">
     <meta name="msapplication-TileColor" content="#efefef">
     <meta name="theme-color" content="#ffffff">
 
     <meta name="twitter:title" content="Stillness.Digital | A Place To Rest" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@xdesro" />
-    <meta name="twitter:image" content="https://stillness.digital/og.png" />
+    <meta name="twitter:image" content="https://stillness.digital/meta/og.png" />
     <meta name="twitter:description"
         content="A website built just for you, which expects nothing of your time. Breathe freely, old friend.">
 
     <meta property="og:title" content="Stillness.Digital | A Place To Rest" />
-    <meta property="og:image" content="https://stillness.digital/og.png" />
+    <meta property="og:image" content="https://stillness.digital/meta/og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
@@ -167,7 +167,7 @@
     <form name="notes" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
         <label>
             <div>leave a kind note, or rare secret.</div>
-            <input type="text" name="note">
+            <input type="text" name="note" required>
             <label class="secret">Don’t fill this out if you’re human: <input name="bot-field" /></label>
             <button type="submit">send</button>
         </label>
