--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             background-color: hsl(0, 0%, 96%);
             background-image: url('/gradient.jpg');
             background-size: cover;
+            background-attachment: fixed;
 
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
@@ -124,7 +125,7 @@
         }
 
         article {
-            max-width: 60ch;
+            max-width: 65ch;
             padding-inline: 1rem;
             text-align: justify;
             margin-bottom: 3rem;
@@ -137,7 +138,6 @@
             content: "&";
             color: hsl(0, 0%, 100%);
             display: block;
-            text-align: center;
             font-family: "Ninna"
         }
 
@@ -149,6 +149,7 @@
         pre {
             font-size: .75rem;
             font-family: inherit;
+            white-space: pre-line;
         }
 
         form {
