--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             color: hsl(0, 0%, 1%);
             background-color: hsl(0, 0%, 96%);
             background-image: url('/gradient.jpg');
-            background-size: cover;
             background-attachment: fixed;
+            background-size: cover;
 
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
@@ -125,20 +125,21 @@
         }
 
         article {
-            max-width: 65ch;
+            font-family: "DM Mono";
+            max-width: 45ch;
+            margin-bottom: 3rem;
             padding-inline: 1rem;
             text-align: justify;
-            margin-bottom: 3rem;
-            font-family: "DM Mono";
         }
 
         article:not(:last-child):after {
+            font-family: "Ninna";
             font-size: 3rem;
             font-feature-settings: 'ss14';
-            content: "&";
-            color: hsl(0, 0%, 100%);
             display: block;
-            font-family: "Ninna"
+            content: "&";
+            text-align: center;
+            color: hsl(0, 0%, 100%);
         }
 
         time {
@@ -147,8 +148,9 @@
         }
 
         pre {
-            font-size: .75rem;
             font-family: inherit;
+            font-size: .75rem;
+            margin-bottom: 3rem;
             white-space: pre-line;
         }
 
@@ -222,6 +224,44 @@ born young
 and raised in a small town right on the border between the Wild West and the Internet;
 guts and love and glory in the last two places in America
 where you can truly get lost.
+            </pre>
+        </article>
+        <article>
+            <time>Sat Apr 23 2022 1:35:00 GMT-0400 (Eastern Daylight Time)</time>
+            <pre>
+i don’t want to “hang out”, i want to know a love so calamitous & deafening that far distant poets must take cover from our ensuing avalanche; diving under desks to attempt approximate couplets, desperate to echo even a fraction of the fusillade and thunder they saw in our hearts
+
+i want to lean too far into an embrace, lose my balance and tumble endlessly with and into one another down the slope, gathering tailings as our descent accelerates to a breakneck plummet, until it’s impossible to sort through which pieces were mine or were yours when we started
+            </pre>
+        </article>
+        <article>
+            <time>Fri Feb 18 2022 10:40:20 GMT-0500 (Eastern Standard Time)</time>
+            <pre>
+i don’t think i want “equity in the form of vesting options and a clear path to promotion”, i want a well-organized kitchen with open cabinets, so when the sunlight pours in through the large bifold window over the sink, it shatters into millions of prismatic shards on each glass
+
+i want to let in the morning early spring sun & its crisp breeze chaperone to glance across neatly stacked white ceramic plates and mugs, like a kind older couple at a gallery opening, and i want to watch a curious parcel of mule deer flirt between the forest and nearby clearing
+
+if by “open to new opportunities”, you mean the infinite number of warm new days and quiet frontiers hiding in every golden plain and conversational creek in the rocky mountain west; if you mean never choosing same-day shipping or nervous meetings or unkind car horns, then yes,
+
+i don’t mind if after all of this, my life amounts to anything by the yardstick of capital; if i don’t quite make it into the photo finish of the rat race. i think if at the end of this, all i’ve done is opened the door for strangers and lost count of sunrises, that’d be okay.
+            </pre>
+        </article>
+        <article>
+            <time>Tue Jan 25 2022 12:45:00 GMT-0500 (Eastern Standard Time)</time>
+            <pre>
+instead of redesigning your portfolio, try carefully folding it into the shape of a sailboat, letting it drift off down the creek, and enjoying the rest of your walk through the wild woods, unafflicted. 
+
+breathe deeply from your lungs,
+perhaps for the first time
+in a long time.
+            </pre>
+        </article>
+        <article>
+            <time>Wed Nov 10 2021 10:04:04 GMT-0500 (Eastern Standard Time)</time>
+            <pre>
+i don’t want to “carve out a few minutes to connect about this role”, i want to carve out a little plot of land in the wild western united states and watch the sun rise over the rockies and watch the steam from my coffee drift up to intermingle with the cool mists of the morning
+
+i don’t want to “loop back around to find a time to chat about this one”, i want to sleep in a subalpine field among the elephantella and the limber pine and the wildflowers, running out of numbers to count the stars with, no sound but the wind and your heartbeat
             </pre>
         </article>
     </main>
