Temporarily hide form

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         }
 
         h1 {
-            font-size: clamp(2.3rem, 9vw, 3.8rem);
+            font-size: clamp(2.3rem, 9vw, 3rem);
             font-weight: normal;
             line-height: 1.1;
             max-width: 14ch;
@@ -121,7 +121,7 @@
         }
 
         main {
-            margin-top: 10rem;
+            margin-top: 5rem;
         }
 
         article {
@@ -137,10 +137,11 @@
             font-size: 3rem;
             font-feature-settings: 'ss14';
             display: block;
-            content: "&";
+            content: "✺";
             text-align: center;
             color: hsl(0, 0%, 100%);
         }
+
 
         time {
             font-size: .75rem;
@@ -155,10 +156,11 @@
         }
 
         form {
+            display: none;
             font-size: .75rem;
             position: absolute;
             right: 1rem;
-            bottom: 1rem;
+            top: 1rem;
             padding: 1rem;
         }
 
@@ -249,7 +251,8 @@ i don’t mind if after all of this, my life amounts to anything by the yardstic
         <article>
             <time>Tue Jan 25 2022 12:45:00 GMT-0500 (Eastern Standard Time)</time>
             <pre>
-instead of redesigning your portfolio, try carefully folding it into the shape of a sailboat, letting it drift off down the creek, and enjoying the rest of your walk through the wild woods, unafflicted. 
+instead of redesigning your portfolio
+try carefully folding it into the shape of a sailboat, letting it drift off down the creek, and enjoying the rest of your walk through the wild woods, unafflicted. 
 
 breathe deeply from your lungs,
 perhaps for the first time
