Simplify pretentious intro

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             font-size: clamp(2.3rem, 9vw, 3rem);
             font-weight: normal;
             line-height: 1.1;
-            max-width: 14ch;
+            max-width: 18ch;
             text-align: center;
             text-transform: uppercase;
             color: hsl(0, 0%, 1%);
@@ -215,9 +215,8 @@
 </head>
 
 <body>
-    <p>Welcome, traveler. I’m glad you could make it.</p>
-    <h1>You may <em>remain</em> just as long as you wish.</h1>
-    <aside>&</aside>
+    <h1>Welcome, <em>traveler.</em></h1>
+    <aside aria-hidden="true">&</aside>
     <main>
         <article>
             <time>Wed Apr 27 2022 12:29:36 GMT-0400 (Eastern Daylight Time)</time>
