Some formatting changes

--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@ in a long time.
             <pre>
 i don’t want to “carve out a few minutes to connect about this role”, i want to carve out a little plot of land in the wild western united states and watch the sun rise over the rockies and watch the steam from my coffee drift up to intermingle with the cool mists of the morning
 
-i don’t want to “loop back around to find a time to chat about this one”, i want to sleep in a subalpine field among the elephantella and the limber pine and the wildflowers, running out of numbers to count the stars with, no sound but the wind and your heartbeat
+i want to sleep in a subalpine field among the elephantella and the limber pine and the wildflowers, running out of numbers to count the stars with,
+
+no sound but the wind and your heartbeat
             </pre>
         </article>
     </main>
