Back to ampersands from asterisks

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             font-size: 3rem;
             font-feature-settings: 'ss14';
             display: block;
-            content: "✺";
+            content: "&";
             text-align: center;
             color: hsl(0, 0%, 100%);
         }
