Font sizing adjustments (too small on mobile)

--- a/index.html
+++ b/index.html
@@ -144,13 +144,14 @@
 
 
         time {
-            font-size: .75rem;
             text-transform: lowercase;
+            text-align: left;
+            display: block;
         }
 
         pre {
             font-family: inherit;
-            font-size: .75rem;
+            font-size: 1rem;
             margin-bottom: 3rem;
             white-space: pre-line;
         }
