Okay well now it's too big

--- a/index.html
+++ b/index.html
@@ -144,24 +144,25 @@
 
 
         time {
-            text-transform: lowercase;
-            text-align: left;
+            font-size: .85rem;
             display: block;
+            text-align: left;
+            text-transform: lowercase;
         }
 
         pre {
             font-family: inherit;
-            font-size: 1rem;
+            font-size: .85rem;
             margin-bottom: 3rem;
             white-space: pre-line;
         }
 
         form {
-            display: none;
             font-size: .75rem;
             position: absolute;
-            right: 1rem;
             top: 1rem;
+            right: 1rem;
+            display: none;
             padding: 1rem;
         }
 
