More ligature captain

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         h1 em {
             font-style: normal;
-            font-feature-settings: 'ss12';
+            font-feature-settings: 'ss07', 'ss12';
             color: hsl(0, 0%, 100%);
         }
 
