Add archive entry

--- a/index.html
+++ b/index.html
@@ -270,6 +270,16 @@ i want to sleep in a subalpine field among the elephantella and the limber pine 
 no sound but the wind and your heartbeat
             </pre>
         </article>
+        <article>
+            <time>Sat Oct 16 2021 16:39:00 GMT-0400 (Eastern Daylight Time)</time>
+            <pre>
+i find myself once again at the gate of the rocky mountains, the bold defenders of the western coast. the golden gaze of the sun lights the path from these quiet plains to the patient and sacred evergreen woods.
+
+in the words of our poet cy warman,
+
+“i just feel good all over.”
+            </pre>
+        </article>
     </main>
     <form name="notes" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
         <label>
