Add march 24 entry

--- a/index.html
+++ b/index.html
@@ -238,6 +238,17 @@ i want to lean too far into an embrace, lose my balance and tumble endlessly wit
             </pre>
         </article>
         <article>
+            <time>Thu Mar 24 2022 13:24:00 GMT-0600 (Mountain Daylight Time)</time>
+            <pre>
+some personal news: i’m moving!
+
+far, far from the intersection of Art & Technology — i’ve found a little ranch up at the end of Route 287 between the towns of Care & Consideration; there’s a little diner where you can sit and drink coffee from an off-white victor mug that never empties.
+
+you can while the day there, meeting quiet neighbors and kind, chatty strangers; drifters all, who don’t ever need anyone else’s time, but are happy when it might be spared. you can listen if you want — watch threads loomed into illustrative anthologies that may be donned year-round, and will always fit as if meticulously tailored; you’ll never need to say a word.
+
+here, patience grows untended among bright Wyoming wildflowers — it makes the morning air feel crisp in your lungs. the streams this time of year are just beginning to shake ice free and mutter to themselves, and you may see the water is well-stocked with wild, untamed composure and equanimity.</pre>
+        </article>
+        <article>
             <time>Fri Feb 18 2022 10:40:20 GMT-0500 (Eastern Standard Time)</time>
             <pre>
 i don’t think i want “equity in the form of vesting options and a clear path to promotion”, i want a well-organized kitchen with open cabinets, so when the sunlight pours in through the large bifold window over the sink, it shatters into millions of prismatic shards on each glass
