--- a/index.html
+++ b/index.html
@@ -1,315 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stillness.Digital | A Place To Rest</title>
-    <meta name="description"
-        content="A website built just for you, which expects nothing of your time. Breathe freely, old friend.">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png">
-    <link rel="manifest" href="/meta/site.webmanifest">
-    <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#030303">
-    <meta name="msapplication-TileColor" content="#efefef">
-    <meta name="theme-color" content="#ffffff">
-
-    <meta name="twitter:title" content="Stillness.Digital | A Place To Rest" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@xdesro" />
-    <meta name="twitter:image" content="https://stillness.digital/meta/og.png" />
-    <meta name="twitter:description"
-        content="A website built just for you, which expects nothing of your time. Breathe freely, old friend.">
-
-    <meta property="og:title" content="Stillness.Digital | A Place To Rest" />
-    <meta property="og:image" content="https://stillness.digital/meta/og.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:type" content="image/png" />
-
-    <style>
-        @font-face {
-            font-family: 'Ninna';
-            font-weight: normal;
-            font-style: normal;
-            font-display: swap;
-            src: url('/ninna.woff2') format('woff2');
-        }
-
-        @font-face {
-            font-family: "DM Mono";
-            font-weight: normal;
-            font-style: normal;
-            font-display: swap;
-            src: url('/dm-mono.woff2')
-        }
-
-        @font-face {
-            font-family: "DM Mono";
-            font-weight: normal;
-            font-style: italic;
-            font-display: swap;
-            src: url('/dm-mono-italic.woff2')
-        }
-
-        body {
-            font-family: 'Ninna';
-            display: grid;
-            justify-items: center;
-            min-height: 100vh;
-            margin: 0;
-            padding-top: 8rem;
-            padding-bottom: 8rem;
-            animation: drift 30s linear infinite;
-            color: hsl(0, 0%, 1%);
-            background-color: hsl(0, 0%, 96%);
-            background-image: url('/gradient.jpg');
-            background-attachment: fixed;
-            background-size: cover;
-
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-
-        @keyframes drift {
-            from {
-                background-position-x: 0;
-            }
-
-            to {
-                background-position-x: 100vw;
-            }
-        }
-
-        ::selection {
-            background-color: hsla(249, 33%, 88%, 40%);
-        }
-
-        h1 {
-            font-size: clamp(2.3rem, 9vw, 3.8rem);
-            font-weight: normal;
-            line-height: 1.1;
-            max-width: 18ch;
-            text-align: center;
-            text-transform: uppercase;
-            color: hsl(0, 0%, 1%);
-        }
-
-        h1:first-letter {
-            font-feature-settings: 'swsh';
-        }
-
-        h1 em {
-            font-style: normal;
-            font-feature-settings: 'ss07', 'ss12';
-            color: hsl(0, 0%, 100%);
-        }
-
-        p {
-            max-width: 22ch;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        aside {
-            font-size: 4rem;
-            font-feature-settings: 'ss14';
-            color: hsl(0, 0%, 100%);
-        }
-
-        main {
-            margin-top: 5rem;
-        }
-
-        article {
-            font-family: "DM Mono";
-            max-width: 45ch;
-            margin-bottom: 3rem;
-            padding-inline: 1rem;
-            text-align: justify;
-        }
-
-        article:not(:last-child):after {
-            font-family: "Ninna";
-            font-size: 3rem;
-            font-feature-settings: 'ss14';
-            display: block;
-            content: "&";
-            text-align: center;
-            color: hsl(0, 0%, 100%);
-        }
-
-
-        time {
-            font-size: .85rem;
-            display: block;
-            text-align: left;
-            text-transform: lowercase;
-        }
-
-        pre {
-            font-family: inherit;
-            font-size: .85rem;
-            margin-bottom: 3rem;
-            white-space: pre-line;
-        }
-
-        form {
-            font-size: .75rem;
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-            display: none;
-            padding: 1rem;
-        }
-
-        label {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-
-        label>div {
-            margin-bottom: .5rem;
-        }
-
-        input {
-            font: inherit;
-            border: none;
-            border-bottom: 1px solid currentColor;
-            border-radius: 0;
-            background-color: transparent;
-        }
-
-        input:focus {
-            outline: none;
-        }
-
-
-        button {
-            font: inherit;
-            padding: .25rem .5rem;
-            cursor: pointer;
-            border: 1px solid currentColor;
-            background-color: transparent;
-        }
-
-        button:hover,
-        button:active {
-            color: hsl(40, 8%, 71%);
-            border-color: hsl(0, 0%, 1%);
-            background-color: hsl(0, 0%, 1%);
-        }
-
-        .secret {
-            position: absolute;
-            overflow: hidden;
-            clip: rect(0 0 0 0);
-            width: 1px;
-            height: auto;
-            margin: 0;
-            padding: 0;
-            white-space: nowrap;
-            border: 0;
-        }
-    </style>
-</head>
-
-<body>
-    <h1>Welcome, <em>traveler.</em></h1>
-    <aside aria-hidden="true">&</aside>
-    <main>
+---
+layout: base.html
+---
+<h1>Welcome, <em>traveler.</em></h1>
+<aside aria-hidden="true">&</aside>
+<main>
+    {% for post in collections.posts | reverse %}
         <article>
-            <time>Wed Apr 27 2022 12:29:36 GMT-0400 (Eastern Daylight Time)</time>
-            <pre>
-born young
-and raised in a small town right on the border between the Wild West and the Internet;
-guts and love and glory in the last two places in America
-where you can truly get lost.
-            </pre>
+            <time>{{ post.date }}</time>
+            <pre>{{ post.templateContent }}</pre>
         </article>
-        <article>
-            <time>Sat Apr 23 2022 1:35:00 GMT-0400 (Eastern Daylight Time)</time>
-            <pre>
-i don’t want to “hang out”, i want to know a love so calamitous & deafening that far distant poets must take cover from our ensuing avalanche; diving under desks to attempt approximate couplets, desperate to echo even a fraction of the fusillade and thunder they saw in our hearts
-
-i want to lean too far into an embrace, lose my balance and tumble endlessly with and into one another down the slope, gathering tailings as our descent accelerates to a breakneck plummet, until it’s impossible to sort through which pieces were mine or were yours when we started
-            </pre>
-        </article>
-        <article>
-            <time>Thu Mar 24 2022 13:24:00 GMT-0600 (Mountain Daylight Time)</time>
-            <pre>
-some personal news: i’m moving!
-
-far, far from the intersection of Art & Technology — i’ve found a little ranch up at the end of Route 287 between the towns of Care & Consideration; there’s a little diner where you can sit and drink coffee from an off-white victor mug that never empties.
-
-you can while the day there, meeting quiet neighbors and kind, chatty strangers; drifters all, who don’t ever need anyone else’s time, but are happy when it might be spared. you can listen if you want — watch threads loomed into illustrative anthologies that may be donned year-round, and will always fit as if meticulously tailored; you’ll never need to say a word.
-
-here, patience grows untended among bright Wyoming wildflowers — it makes the morning air feel crisp in your lungs. the streams this time of year are just beginning to shake ice free and mutter to themselves, and you may see the water is well-stocked with wild, untamed composure and equanimity.</pre>
-        </article>
-        <article>
-            <time>Fri Feb 18 2022 10:40:20 GMT-0500 (Eastern Standard Time)</time>
-            <pre>
-i don’t think i want “equity in the form of vesting options and a clear path to promotion”, i want a well-organized kitchen with open cabinets, so when the sunlight pours in through the large bifold window over the sink, it shatters into millions of prismatic shards on each glass
-
-i want to let in the morning early spring sun & its crisp breeze chaperone to glance across neatly stacked white ceramic plates and mugs, like a kind older couple at a gallery opening, and i want to watch a curious parcel of mule deer flirt between the forest and nearby clearing
-
-if by “open to new opportunities”, you mean the infinite number of warm new days and quiet frontiers hiding in every golden plain and conversational creek in the rocky mountain west; if you mean never choosing same-day shipping or nervous meetings or unkind car horns, then yes,
-
-i don’t mind if after all of this, my life amounts to anything by the yardstick of capital; if i don’t quite make it into the photo finish of the rat race. i think if at the end of this, all i’ve done is opened the door for strangers and lost count of sunrises, that’d be okay.
-            </pre>
-        </article>
-        <article>
-            <time>Tue Jan 25 2022 12:45:00 GMT-0500 (Eastern Standard Time)</time>
-            <pre>
-instead of redesigning your portfolio
-try carefully folding it into the shape of a sailboat, letting it drift off down the creek, and enjoying the rest of your walk through the wild woods, unafflicted. 
-
-breathe deeply from your lungs,
-perhaps for the first time
-in a long time.
-            </pre>
-        </article>
-        <article>
-            <time>Wed Nov 10 2021 10:04:04 GMT-0500 (Eastern Standard Time)</time>
-            <pre>
-i don’t want to “carve out a few minutes to connect about this role”, i want to carve out a little plot of land in the wild western united states and watch the sun rise over the rockies and watch the steam from my coffee drift up to intermingle with the cool mists of the morning
-
-i want to sleep in a subalpine field among the elephantella and the limber pine and the wildflowers, running out of numbers to count the stars with,
-
-no sound but the wind and your heartbeat
-            </pre>
-        </article>
-        <article>
-            <time>Sat Oct 16 2021 16:39:00 GMT-0400 (Eastern Daylight Time)</time>
-            <pre>
-i find myself once again at the gate of the rocky mountains, the bold defenders of the western coast. the golden gaze of the sun lights the path from these quiet plains to the patient and sacred evergreen woods.
-
-in the words of our poet cy warman,
-
-“i just feel good all over.”
-            </pre>
-        </article>
-    </main>
-    <form name="notes" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
-        <label>
-            <div>leave a kind note, or rare secret.</div>
-            <input type="text" name="note" required>
-            <label class="secret">Don’t fill this out if you’re human: <input name="bot-field" /></label>
-            <button type="submit">send</button>
-        </label>
-    </form>
-    <footer class="secret">my, you are certainly curious, eh! what a delight it must be to know you. i feel you are a
-        dear friend to me already.</footer>
-    <script>
-        console.log(
-            '❧ hey. i’m henry (https://henry.codes) — idk why I made this, just wanted to put something nice and quiet out there on the web today.\n\n',
-            '❧ it’s just one html file with like some css and a script tag to print this text.\n\n',
-            '❧ the font is margot lévêque’s ninna. — https://margotleveque.com/collections/ninna\n\n',
-            '❧ stay safe out there.'
-        );
-    </script>
-</body>
-
-</html>
+    {% endfor %}
+</main>
+<!-- <form name="notes" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
+    <label>
+        <div>leave a kind note, or rare secret.</div>
+        <input type="text" name="note" required>
+        <label class="secret">Don’t fill this out if you’re human: <input name="bot-field" /></label>
+        <button type="submit">send</button>
+    </label>
+</form>
+ -->
