🧹 - Some CSS cleanup

--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@ layout: base.html
 <main>
   <form id="form">
     <textarea name="body"></textarea>
-    <button type="submit">Submit</button>
+    <button type="submit">submit</button>
   </form>
 </main>
 
