🔗 - Add meta descriptions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ layout: base.html
         </article>
     {% endfor %}
 </main>
+<footer class="secret">
+    my, you are certainly curious, eh! what a delight it must be to know you.
+    i feel you are a dear friend to me already.
+</footer>
 <!-- <form name="notes" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
     <label>
         <div>leave a kind note, or rare secret.</div>
