👻 - Add post text to opengraph images

--- a/og/_post.html
+++ b/og/_post.html
@@ -8,3 +8,4 @@ permalink: "/opengraph{{ post.url }}"
 ---
 <h1>Stillness.digital</h1>
 <h2>{{ post.date | timezonedDate(post.gps) }}</h2>
+<pre>{{ post.templateContent | safe }} </pre>
