--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@ layout: base.html
 ---
 
 <main>
-  <button id="getgeo" style="top: 0;left:0">test</button>
+  <button id="getgeo">Add GPS</button>
   <form id="form">
     <textarea name="body"></textarea>
     <button type="submit">submit</button>
@@ -14,21 +14,22 @@ layout: base.html
   const form = document.querySelector("#form");
   const button = document.querySelector('#getgeo')
   let currentLocation = null;
+  let gps = false;
 
-  const success = (position) => {
+  const handleGeoSuccess = (position) => {
+    gps = true;
     const latitude = position.coords.latitude;
     const longitude = position.coords.longitude;
-
-    button.textContent = `${latitude} - ${longitude}`;
-    return [latitude, longitude];
+    currentLocation =  [latitude, longitude];
+    button.textContent = currentLocation
   };
+  const handleGeoError = err => {
+    console.error(err);
+    button.textContent = `error`
+  }
 
   button.addEventListener("click", (e) => {
-    if (navigator.location) {
-      currentLocation = navigator.geolocation.getCurrentPosition(success);
-    } else {
-      console.log('no nav')
-    }
+    navigator.geolocation.getCurrentPosition(handleGeoSuccess, handleGeoError);
   });
   const handleSubmission = (e) => {
     e.preventDefault();
@@ -38,6 +39,7 @@ layout: base.html
 
     const template = `---
 date: ${date.toISOString()}
+${gps && `gps: [${currentLocation}]`}
 ---
 ${text}`;
 
