🗄  - Make sure posts are created in the right directory

--- a/new.html
+++ b/new.html
@@ -39,12 +39,12 @@ layout: base.html
 
     const template = `---
 date: ${date.toISOString()}
-${gps && `gps: [${currentLocation}]`}
+${(gps && `gps: [${currentLocation}]`) || ''}
 ---
 ${text}`;
 
     const message = `📄 - Create new post: ${date}`;
-    const ghQueryUrl = `https://github.com/xdesro/stillness/new/main/posts?filename=${date}.html&value=${encodeURIComponent(
+    const ghQueryUrl = `https://github.com/xdesro/stillness/new/main/posts?filename=posts%2F${date}.html&value=${encodeURIComponent(
       template
     )}&message=${encodeURIComponent(message)}`;
     window.location.href = ghQueryUrl;
