📐 - Adjust layout for internal post pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: base.html
 ---
 <h1>Welcome, <em>traveler.</em></h1>
 <aside aria-hidden="true">&</aside>
-<main>
+<main class="home">
     <nav>
         <ol>
             {% for post in collections.posts | reverse %}
